--- a/AvaloniaApplication1/Views/MainWindow.axaml
+++ b/AvaloniaApplication1/Views/MainWindow.axaml
@@ -3,60 +3,41 @@
         xmlns:vm="using:AvaloniaApplication1.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:controls="clr-namespace:AvaloniaApplication1.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AvaloniaApplication1.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="AvaloniaApplication1"
         HasSystemDecorations="False"
         TransparencyLevelHint="Transparent"
-        Background="#0fff"
-        Position="1921, 1"
-        Height="1078"
-        Width="2558">
-    <Window.Styles>
+        Background="#0fff">
+	<Window.Styles>
 		<Style Selector="Button">
 			<Setter Property="Background" Value="#a000"/>
-            <Setter Property="Margin" Value="10"></Setter>
-		</Style>
+			<Setter Property="Margin" Value="10"></Setter>
+			<Setter Property="Height" Value="210"/>
+			<Setter Property="Width" Value="210"/>
+        </Style>
 		<Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
 			<Setter Property="Background" Value="#8000"/>
 		</Style>
 		<Style Selector="Button:pressed">
-            <Setter Property="Background" Value="#9000"/>
-        </Style>
-    </Window.Styles>
+			<Setter Property="Background" Value="#9000"/>
+		</Style>
+	</Window.Styles>
 
-    <Design.DataContext>
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
+	<Design.DataContext>
+		<vm:MainWindowViewModel/>
+	</Design.DataContext>
 
-	<Grid>
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top">
-			<StackPanel Orientation="Horizontal">
-				<Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-				<Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-				<Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-                <Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-                <Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-                <Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-			</StackPanel>
-			<StackPanel Orientation="Horizontal">
-				<Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-				<Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-				<Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-                <Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-                <Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-                <Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-			</StackPanel>
-			<StackPanel Orientation="Horizontal">
-                <Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-                <Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-                <Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-				<Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-				<Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-				<Button Click="Button_OnClick" Width="300" Height="300">123</Button>
-            </StackPanel>
-        </StackPanel>
-    </Grid>
+	<ScrollViewer>
+		<ItemsControl x:Name="tiles">
+			<ItemsControl.DataTemplates>
+				<DataTemplate>
+					<controls:Row Items="{Binding}" HorizontalAlignment="Stretch"/>
+                </DataTemplate>
+            </ItemsControl.DataTemplates>
+        </ItemsControl>
+	</ScrollViewer>
 
 </Window>
