--- a/AvaloniaApplication1/Styles/DefaultStyle.axaml
+++ b/AvaloniaApplication1/Styles/DefaultStyle.axaml
@@ -1,16 +1,24 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style Selector="Button">
+	<Style Selector="Button">
+		<Setter Property="Margin" Value="1"/>
+	</Style>
+	<Style Selector="Button > Grid > Grid > Image">
+		<Setter Property="Width" Value="40"/>
+		<Setter Property="Height" Value="40"/>
+		<Setter Property="HorizontalAlignment" Value="Center"/>
+		<Setter Property="VerticalAlignment" Value="Center"/>
+	</Style>
+    <Style Selector="Button > Grid > Grid">
+        <Setter Property="Width" Value="100"/>
+        <Setter Property="Height" Value="100"/>
     </Style>
-    <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-    </Style>
-    <Style Selector="Button:pressed">
-    </Style>
-
     <Style Selector="Button.Tile">
-        <Setter Property="Width" Value="280"/>
-        <Setter Property="Height" Value="280"/>
-    </Style>
-    <Style Selector="Button.openAnimation">
+		<Setter Property="Width" Value="280"/>
+		<Setter Property="Height" Value="280"/>
+	</Style>
+    <Style Selector="Button > Grid > Image">
+        <Setter Property="Width" Value="50"/>
+        <Setter Property="Height" Value="50"/>
     </Style>
 </Styles>
