--- a/AvaloniaApplication1/App.axaml
+++ b/AvaloniaApplication1/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:AvaloniaApplication1"
-             x:Class="AvaloniaApplication1.App">
+             xmlns:local="using:DesktopTiles"
+             x:Class="DesktopTiles.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
