--- a/AvaloniaApplication1/Controls/Row.axaml
+++ b/AvaloniaApplication1/Controls/Row.axaml
@@ -2,9 +2,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:models="clr-namespace:AvaloniaApplication1.Models"
+             xmlns:models="clr-namespace:DesktopTiles.Models"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AvaloniaApplication1.Controls.Row">
+             x:Class="DesktopTiles.Controls.Row">
 	<UserControl.Styles>
 		<Style Selector="Button.inFolder">
 			<Setter Property="Margin" Value="2"/>
