--- a/AvaloniaApplication1/Styles/DefaultStyle.axaml
+++ b/AvaloniaApplication1/Styles/DefaultStyle.axaml
@@ -21,4 +21,7 @@
         <Setter Property="Width" Value="50"/>
         <Setter Property="Height" Value="50"/>
     </Style>
+	<Style Selector="TextBlock.BackButtonText">
+        <Setter Property="Foreground" Value="#fff"/>
+    </Style>
 </Styles>
