--- a/AvaloniaApplication1/Styles/DefaultStyle.axaml
+++ b/AvaloniaApplication1/Styles/DefaultStyle.axaml
@@ -1,15 +1,16 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Style Selector="Button">
+	<Style Selector="Button.Tile">
 		<Setter Property="Margin" Value="1"/>
 	</Style>
-	<Style Selector="Button > Grid > Grid > Image">
+	<Style Selector="Image.FolderTileImage">
 		<Setter Property="Width" Value="40"/>
 		<Setter Property="Height" Value="40"/>
 		<Setter Property="HorizontalAlignment" Value="Center"/>
 		<Setter Property="VerticalAlignment" Value="Center"/>
+		<Setter Property="Margin" Value="2.5"/>
 	</Style>
-    <Style Selector="Button > Grid > Grid">
+    <Style Selector="Grid.FolderTileImagesContainer">
         <Setter Property="Width" Value="100"/>
         <Setter Property="Height" Value="100"/>
     </Style>
@@ -17,11 +18,23 @@
 		<Setter Property="Width" Value="280"/>
 		<Setter Property="Height" Value="280"/>
 	</Style>
-    <Style Selector="Button > Grid > Image">
+    <Style Selector="Image.ItemTileImage">
         <Setter Property="Width" Value="50"/>
         <Setter Property="Height" Value="50"/>
     </Style>
 	<Style Selector="TextBlock.BackButtonText">
         <Setter Property="Foreground" Value="#fff"/>
+    </Style>
+	<Style Selector="TextBlock.ItemTileTitle">
+        <Setter Property="Text" Value="{Binding Name}"/>
+        <Setter Property="Foreground" Value="#fff"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+    </Style>
+	<Style Selector="TextBlock.FolderTileTitle">
+		<Setter Property="Text" Value="{Binding Name}"/>
+		<Setter Property="Foreground" Value="#fff"/>
+		<Setter Property="HorizontalAlignment" Value="Center"/>
+		<Setter Property="VerticalAlignment" Value="Bottom"/>
     </Style>
 </Styles>
