--- a/AvaloniaApplication1/Styles/Win11.axaml
+++ b/AvaloniaApplication1/Styles/Win11.axaml
@@ -1,7 +1,7 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         >
-	<Style Selector="Button">
+	<Style Selector="Button.Tile">
 		<Setter Property="Transitions">
 			<Setter.Value>
 				<Transitions>
@@ -16,7 +16,7 @@
 		<Setter Property="Background" Value="#c000"/>
 		<Setter Property="Margin" Value="1"/>
 	</Style>
-	<Style Selector="Button > Grid > Image">
+	<Style Selector="Image.ItemTileImage">
 		<Setter Property="Width" Value="50"/>
 		<Setter Property="Height" Value="50"/>
 		<Setter Property="Transitions">
@@ -28,7 +28,7 @@
 			</Setter.Value>
 		</Setter>
 	</Style>
-	<Style Selector="Button > Grid > Grid">
+	<Style Selector="Grid.FolderTileImagesContainer">
 		<Setter Property="Width" Value="100"/>
 		<Setter Property="Height" Value="100"/>
 		<Setter Property="Transitions">
@@ -40,7 +40,7 @@
 			</Setter.Value>
 		</Setter>
 	</Style>
-    <Style Selector="Button > Grid > Grid > Image">
+    <Style Selector="Image.FolderTileImage">
         <Setter Property="Width" Value="40"/>
         <Setter Property="Height" Value="40"/>
 		<Setter Property="HorizontalAlignment" Value="Center"/>
@@ -54,18 +54,18 @@
             </Setter.Value>
         </Setter>
     </Style>
-	<Style Selector="Button:pointerover > Grid > Grid">
+	<Style Selector="Button.Tile:pointerover > Border > Grid > Grid.FolderTileImagesContainer">
 		<Setter Property="Width" Value="130"/>
 		<Setter Property="Height" Value="130"/>
     </Style>
-    <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+    <Style Selector="Button.Tile:pointerover /template/ ContentPresenter#PART_ContentPresenter">
         <Setter Property="Background" Value="#d000"/>
     </Style>
-    <Style Selector="Button:pointerover > Grid > Image">
+    <Style Selector="Button.Tile:pointerover  > Border > Grid > Image.ItemTileImage">
         <Setter Property="Width" Value="55"/>
         <Setter Property="Height" Value="55"/>
     </Style>
-    <Style Selector="Button:pressed">
+    <Style Selector="Button.Tile:pressed">
         <Setter Property="Background" Value="#e000"/>
     </Style>
 
@@ -73,19 +73,19 @@
         <Setter Property="Width" Value="280"/>
         <Setter Property="Height" Value="280"/>
     </Style>
-	<Style Selector="Button.openAnimation">
+	<Style Selector="Button.Tile.openAnimation">
 		<Setter Property="Background" Value="#1000"/>
 		<Setter Property="Width" Value="500"/>
 		<Setter Property="Height" Value="500"/>
 		<Setter Property="Margin" Value="-109"/>
 	</Style>
-	<Style Selector="Button.openAnimation:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+	<Style Selector="Button.Tile.openAnimation:pointerover /template/ ContentPresenter#PART_ContentPresenter">
         <Setter Property="Background" Value="#1000"/>
         <Setter Property="Width" Value="500"/>
         <Setter Property="Height" Value="500"/>
         <Setter Property="Margin" Value="-109"/>
     </Style>
-    <Style Selector="Button.openAnimation > Grid > Image">
+    <Style Selector="Button.Tile.openAnimation > Border > Grid > Image.ItemTileImage">
         <Setter Property="Width" Value="100"/>
         <Setter Property="Height" Value="100"/>
     </Style>
