--- a/AvaloniaApplication1/Styles/DefaultStyle.axaml
+++ b/AvaloniaApplication1/Styles/DefaultStyle.axaml
@@ -1,6 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	<Style Selector="ScrollViewer.TilesScrollViewer">
+		<Setter Property="HorizontalAlignment" Value="Stretch"/>
+		<Setter Property="VerticalAlignment" Value="Stretch"/>
+		<Setter Property="Margin" Value="10 10 10 60"/>
+	</Style>
+	<Style Selector="ItemsControl.TilesContainer">
+		<Setter Property="ItemsPanel">
+			<ItemsPanelTemplate>
+				<WrapPanel 
+                    VerticalAlignment="Center" 
+                    HorizontalAlignment="Center" 
+                    Orientation="Horizontal"/>
+			</ItemsPanelTemplate>
+		</Setter>
+	</Style>
+
 	<Style Selector="Button.Tile">
 		<Setter Property="Margin" Value="1"/>
 	</Style>
@@ -57,5 +73,5 @@
 	</Style>
 	<Style Selector="Border.ItemTileBorder">
 		<Setter Property="BorderThickness" Value="0"/>
-    </Style>
+	</Style>
 </Styles>
